--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,1 +1,5 @@
-<h2><%= @tasks.title %></h2>
+<h2><%= @task.title %></h2>
+<p><%= @task.details %></p>
+<p><%= @task.completed? ? '' : 'This task is not completed yet' %></p>
+
+<%= link_to "Back to list", tasks_path %>
