--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,4 +2,6 @@
 <p><%= @task.details %></p>
 <p><%= @task.completed? ? '' : 'This task is not completed yet' %></p>
 
+<%= link_to "Update task", edit_task_path %>
+
 <%= link_to "Back to list", tasks_path %>
