--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,4 +4,9 @@
 
 <%= link_to "Update task", edit_task_path %>
 
+<%= link_to "Delete",
+  task_path(@task),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
+
 <%= link_to "Back to list", tasks_path %>
